# btc

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: btc.h
src/: ast_item.c  ast_item.h  btc.h  character.c  character.h  container_declaration.c  container_declaration.h  container_group.c  container_params.c  containers_list.c  containers_list.h  namespace.c  namespace.h  parser.c  parser.h  parser_identifier.h  range.h  token.h  tokenizer.c  tokenizer.h  tokens_list.c  tokens_list.h
src/ast/: alias.h  ast_item.c  ast_item.h  ast_list.c  ast_list.h  comment.c  comment.h  comments_list.c  comments_list.h  container_declaration.c  container_declaration.h  container_group.c  container_group.h  container_param.c  container_param.h  container_params.c  container_params.h  containers_list.c  containers_list.h  import_declaration.h  member_expression.c  member_expression.h  namespace.c  namespace.h  number.h  parser_identifier.h  string.h  template.c  template.h  template_declaration.c  template_declaration.h
src/tokenizer/: character.c  character.h  token.c  token.h  tokenizer.c  tokenizer.h  tokens_list.h
test/: test.c  test_parser.c  test_parser.h  test_parser_comments.c  test_parser_comments.h  test_tokenizer.c  test_tokenizer.h
